--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test -- --coverage
+        run: npm run test -- --coverage --passWithNoTests
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
