PR#4: プライバシーポリシーページ

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,5 @@
     "**/playwright-report": true
   },
   // Code Spell Checkerで除外する単語
-  "cSpell.words": ["flexbox"]
+  "cSpell.words": ["flexbox", "kuromoji"]
 }
