--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,27 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout
+      - name: Checkout frontend
         uses: actions/checkout@v4
+
+      - name: Checkout backend
+        uses: actions/checkout@v4
+        with:
+          repository: Kubo-Tech/line_talk_analyzer_backend
+          path: backend
+
+      - name: Setup Python for backend
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Start backend API server
+        working-directory: backend
+        run: |
+          pip install -r requirements.txt
+          nohup uvicorn app.main:app --host 0.0.0.0 --port 8001 &
+          sleep 5
+          curl --retry 5 --retry-delay 2 --retry-connrefused http://localhost:8001/health || echo "Backend health check failed"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
