辞書パスの設定とmecabrcの作成を追加

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,8 +119,24 @@ jobs:
           # Install mecab-ipadic-neologd
           git clone --depth 1 https://github.com/neologd/mecab-ipadic-neologd.git /tmp/neologd
           sudo /tmp/neologd/bin/install-mecab-ipadic-neologd -n -y
+          # Find the installed dictionary path
+          DICDIR=$(mecab-config --dicdir)
+          NEOLOGD_PATH=$(find $DICDIR -name "mecab-ipadic-neologd" -type d | head -n 1)
+          echo "Neologd dictionary path: $NEOLOGD_PATH"
+          # Create symlink if needed
+          if [ ! -d "/usr/lib/x86_64-linux-gnu/mecab/dic/mecab-ipadic-neologd" ]; then
+            sudo mkdir -p /usr/lib/x86_64-linux-gnu/mecab/dic
+            sudo ln -s $NEOLOGD_PATH /usr/lib/x86_64-linux-gnu/mecab/dic/mecab-ipadic-neologd
+          fi
+          # Create mecabrc if it doesn't exist
+          if [ ! -f /usr/local/etc/mecabrc ]; then
+            sudo mkdir -p /usr/local/etc
+            echo "dicdir = $NEOLOGD_PATH" | sudo tee /usr/local/etc/mecabrc
+          fi
           # Verify installation
           mecab -v
+          ls -la /usr/lib/x86_64-linux-gnu/mecab/dic/ || true
+          cat /usr/local/etc/mecabrc || true
 
       - name: Install Python dependencies
         working-directory: backend
