--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,7 @@ jobs:
       - name: Checkout backend
         uses: actions/checkout@v4
         with:
+          # Public repository - no authentication required
           repository: Kubo-Tech/line_talk_analyzer_backend
           path: backend
 
@@ -116,8 +117,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y mecab libmecab-dev mecab-ipadic-utf8
-          # Install mecab-ipadic-neologd
-          git clone --depth 1 https://github.com/neologd/mecab-ipadic-neologd.git /tmp/neologd
+          # Install mecab-ipadic-neologd (pinned to specific commit for security and reproducibility)
+          git clone https://github.com/neologd/mecab-ipadic-neologd.git /tmp/neologd
+          cd /tmp/neologd
+          # Pin to the latest stable commit as of 2026-01-01
+          # Update this hash periodically to get the latest dictionary
+          git checkout abc61e33d8be3d0ead202e6b1df064c72d5ccf11
+          cd -
           sudo /tmp/neologd/bin/install-mecab-ipadic-neologd -n -y
           # Find the installed dictionary path
           DICDIR=$(mecab-config --dicdir)
@@ -145,9 +151,9 @@ jobs:
       - name: Start backend API server
         working-directory: backend
         run: |
-          nohup uvicorn app.main:app --host 0.0.0.0 --port 8001 &
+          nohup uvicorn app.main:app --host 0.0.0.0 --port 8000 &
           sleep 10
-          curl --retry 10 --retry-delay 3 --retry-connrefused http://localhost:8001/health || echo "Backend health check failed"
+          curl --retry 10 --retry-delay 3 --retry-connrefused http://localhost:8000/api/v1/health || { echo "Backend health check failed"; exit 1; }
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -168,6 +174,8 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       - name: Run E2E tests
+        env:
+          NEXT_PUBLIC_API_BASE_URL: http://localhost:8000
         run: npm run test:e2e
 
       - name: Upload Playwright report
