--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^11.0.0",
     "next": "16.0.10",
     "react": "19.2.1",
